--- a/projects-page.css
+++ b/projects-page.css
@@ -3,7 +3,7 @@
     --space-between-projects: 135px;
 }
 #Projects-Page h4 {
-    font-family: TitleFont;
+    font-family: TextFont;
     font-size: 36px;
 
     margin-bottom: 20px;
@@ -96,13 +96,13 @@
     width: 100%;
 }
 .project .image-container img {
-    border-radius: 20px;
+    border-radius: 10px;
     width: 100%;
     -webkit-box-shadow: 0px 0px 10px 1px #000000; 
     box-shadow: 0px 0px 10px 1px #000000;
 }
 .project-description-text {
-    font-family: TitleFont;
+    font-family: TextFont;
     font-size: 24px;
 
     /* Ellipsis on the 4th line */
@@ -159,7 +159,7 @@
 }
 .tags > span {
     background-color: var(--teal-color);
-    font-family: TitleFont;
+    font-family: TextFont;
     color: white;
 
     
