Improved back arrow; made more responsive layout improvements

--- a/style.css
+++ b/style.css
@@ -318,6 +318,17 @@ h2 {
         right: 15px;
     }
 }
+@media (max-width: 485px) {
+    .phone-img {
+        width: calc(0.47 * var(--phone-width));
+        right: 5px;
+    }
+    .project-phone-img {
+        width: calc(0.47 * var(--project-phone-width));
+        bottom: 29px;
+        right: 10px;
+    }
+}
 .hidden {
     display: none;
 }
@@ -713,27 +724,3 @@ h2 {
 }
 
 
-.back-arrow {
-    position: fixed;
-    z-index: 999999;
-    top: 8px;
-    left: 20px;
-
-    font-size: 55px;
-    color: var(--teal-color);
-    opacity: 0.5;
-
-    cursor: pointer;
-
-    -moz-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-
-    transition: color 0.1s ease-out;
-}
-.back-arrow:hover {
-    color: var(--teal-color-brighter);
-    opacity: 1;
-}
