--- a/projects-page.css
+++ b/projects-page.css
@@ -169,3 +169,41 @@
 
     border-radius: 25px;
 }
+
+
+
+
+.back-arrow-container {
+    position: fixed;
+    z-index: 999991;
+    top: 0px;
+    left: 0px;
+
+    cursor: pointer;
+}
+.back-arrow-background {
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    z-index: 999992;
+}
+.back-arrow {
+    position: fixed;
+    z-index: 999993;
+
+    top: 10px;
+    left: 10px;
+    font-size: 35px;
+    color: var(--teal-color);
+
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+    transform: scale(-1, 1);
+
+    transition: color 0.1s ease-out;
+}
+.back-arrow:hover {
+    color: white;
+}
